@@ -1,5 +1,9 @@
 2003-10-11  Sam Steingold  <sds@gnu.org>
 
+	* win32aux.d, win32.d (sock_write): accept no_hang
+
+2003-10-11  Sam Steingold  <sds@gnu.org>
+
 	fixed a bug in READ-BYTE-SEQUENCE :NO-HANG T on unbuffered
 	streams whereby the first byte is eaten and returned last
 	* stream.d (UnbufferedStream_pop_all): new function
